[ADD] Added teaching sessions

--- a/_teaching/2025-dsa.md
+++ b/_teaching/2025-dsa.md
@@ -1,15 +1,14 @@
 ---
-title: "Ingegneria degli Algoritmi (2022-2023)"
+title: "Ingegneria degli Algoritmi (2025-2026)"
 collection: teaching
 type: "Algoritmi e Strutture Dati"
-permalink: /teaching/2022-dsa
-venue: "Università Tor Vergata, Ingegneria Informatica"
-start_date: 2022-01-01
-end_date: 2023-01-01
-date: 2022-01-01
+permalink: /teaching/2025-dsa
+venue: "Università di Roma Tor Vergata, Ingegneria Informatica"
+start_date: 2025-01-01
+end_date: 2026-01-01
+date: 2025-01-01
 location: "Rome, Italy"
 ---
-
 ## Descrizione del corso
 Il corso di Ingegneria degli Algoritmi ha l’obiettivo di fornire agli studenti una solida comprensione dei principi fondamentali della progettazione, analisi e implementazione degli algoritmi. Partendo dai concetti di complessità computazionale e strutture dati di base, il corso guida lo studente nello sviluppo di soluzioni efficienti a problemi computazionali reali, con particolare attenzione agli aspetti pratici di implementazione e ottimizzazione del codice.
 
@@ -23,28 +22,32 @@ Alla fine del corso, lo studente sarà in grado di:
 
 
 ## Argomenti trattati
-- Algorithm Complexity  
-- C programming  
-- Sorting Algorithms
-- Data Structures
-- Graph Search Algorithms
-- Hash Table
-- Dynamic Programming
+- Complessità Algoritmica  
+- Programmazione in C
+- Algoritmi di ordinamento
+- Strutture Dati
+- Algoritmi di ricerca su Grafi
+- Tabelle di Hash
+- Programmazione Dinamica
 
 ## Slide delle lezioni
-- [Introduzione](../files/dsa2022/00-Introduzione.pdf)
-- [Analisi della complessità](../files/dsa2022/01-Analisi_Complessità.pdf)
-- [Esercizi di Programmazione](../files/dsa2022/02-Esercizi_programmazione_in_C.pdf)
-- [Tecniche Algoritmiche](../files/dsa2022/03-Tecniche_algoritmiche_di_base.pdf)
-- [Esercizi Strutture Dati - Pt 1](../files/dsa2022/04-Esercizi_Strutture_Dati.pdf)
-- [Esercizi Strutture Dati - Pt 2](../files/dsa2022/05-Esercizi_Strutture_Dati_2.pdf)
-- [Grafi](../files/dsa2022/Grafi.pdf)
-- [Esercizi Strutture Dati - Pt 3](../files/dsa2022/07-Esercizi_Strutture_Dati_3.pdf)
-- [Esercizi d'esame](../files/dsa2022/08-Esercizi_esame.pdf)
-- [Hash Tablee Dynamic Programming](../files/dsa2022/09-Hash_Table_Dynamic_Programming.pdf)
-
+1. [Introduzione](../files/dsa2025/1.Introduzione.pdf)
+2. [Metodi sulle Ricorrenze Lineari](../files/dsa2025/2.Metodi_Ricorrenze_Lineari.pdf)
+3. [Esercizi sulle Ricorrenze Lineari](../files/dsa2025/3.Esercizi_Ricorremze_Lineari.pdf) 
 
 ## Codice
-- [Code](../files/dsa2022/code.tar.gz)
+
+## Calendario delle lezioni
+
+Le lezioni si tengono ogni **lunedì**, a partire dal **20 ottobre 2025**.
+
+| **Giorno** | **Data**          | **Ora** | **Argomento** |
+|:------:|:------------------:|:-----:|:--------------:|
+| Lunedì | 20-10-2025 | 16:00 - 18:00 | Analisi della complessità e notazione asintotica |
+| Lunedì | 27-10-2025 | 16:00 - 18:00 | Esercizi sulle metodologie per stimare asintoticamente ricorrenze lineari |
+{: .large-table }
+
+
+📅 *Il calendario potrà subire variazioni; eventuali aggiornamenti saranno comunicati durante il corso.*
 
 ## Esami Passati
